@@ -4,6 +4,7 @@
 * Implement `ConnectionBuilder::start_with_runtime` to use an existing tokio runtime.
 * Fix rare situation where the user send a command before the connection with the
   server is available, causing that operation to be sent only after a `operation timeout` time.
+* No longer terminate the connection in case of identification timeout.
 
 0.2.2
 =====
